--- a/index/style.css
+++ b/index/style.css
@@ -1,8 +1,8 @@
 :root {
-  --clr-txt: #2a271d;
-  --clr-bg-primary: #665d3e;
-  --clr-bg-secondary: #395036;
-  --clr-bg-tertiary: #477740;
+  --clr-txt: #32cc04;
+  --clr-bg-primary: #333333;
+  --clr-bg-secondary: #755939be;
+  --clr-bg-tertiary: #000000;
 }
 body {
   background-color: var(--clr-bg-primary);
@@ -11,7 +11,24 @@ header .portrait {
   width: 50%;
   margin: 2.5vh auto 2.5vh;
 }
-section .heading {
+@media screen and (min-width: 1000px) {
+  header .portrait {
+    width: 33%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .content {
+    background-image: url(../assets/signature-background.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+  }
+}
+.content {
+  border: 5px solid white;
+  padding: 2.5rem;
+}
+div .heading {
   margin: 1rem auto 1rem;
   max-width: 700px;
 }
