--- a/Capstone/project/_assets/templates/home.html
+++ b/Capstone/project/_assets/templates/home.html
@@ -17,7 +17,7 @@
         <header class="d-flex align-items-center justify-content-between">
             <h1>Atlas Electronica</h1>
             <span class="d-flex align-items-center gap-2">
-
+                <!-- display navlinks based upon whether the user is logged in or not -->
                 {% if user.is_authenticated %}
                     Welcome, <a href="{% url 'home:profile' %}">{{user.display_name}}</a>
                     <a href="{% url 'auth:logout' %}">Logout</a>
@@ -29,8 +29,10 @@
 
         </header>
         <main class="d-flex flex-column m-2 p-2 text-center">
+            <!-- links and forms will be removed when user is logged in and navigates to profile -->
             {% block profile%}
             <h4 class="">Patron Portal</h4>
+                <!-- when a link is clicked the block will replace links with form -->
                 {% block forms %}
                 <a href="{% url 'auth:login' %}">Login</a>
                 <a href="{% url 'auth:register' %}">Register</a>
