--- a/Capstone/project/_assets/templates/forms/verified.html
+++ b/Capstone/project/_assets/templates/forms/verified.html
@@ -8,7 +8,9 @@
         <div class="col">
             <form class="d-flex flex-column align-items-center p-3" action="{% url 'auth:complete' %}" method="post">
                 {% csrf_token %}
+
                 {{form}}
+                <!-- <input type="hidden" name="regcode" value="{{regcode}}" id=""> -->
                 <button type="submit" class="btn-dark m-1">complete registration</button>
             </form>
         </div>
