--- a/Capstone/project/_assets/templates/home.html
+++ b/Capstone/project/_assets/templates/home.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Import Project Theme -->
     <link rel="stylesheet" href=" {% static 'style/theme.css' %}">
-
+    <!-- import fontawesome icon kit -->
+    <script src="https://kit.fontawesome.com/cf85ff7c3b.js" crossorigin="anonymous"></script>
     <title>Atlas Electronica</title>
 </head>
 <body>
@@ -34,8 +35,13 @@
             <h4 class="">Patron Portal</h4>
                 <!-- when a link is clicked the block will replace links with form -->
                 {% block forms %}
-                <a href="{% url 'auth:login' %}">Login</a>
-                <a href="{% url 'auth:register' %}">Register</a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'home:profile' %}">Profile</a>
+                {% else %}
+                    <a href="{% url 'auth:login' %}">Login</a>
+                    <a href="{% url 'auth:register' %}">Register</a>
+                {% endif %}
+
                 {% endblock %}
             {% endblock %}
 
