--- a/Capstone/project/_assets/templates/profile.html
+++ b/Capstone/project/_assets/templates/profile.html
@@ -5,12 +5,27 @@
     <div class="row">
         <h1>Profile</h1>
         <div class="col"></div>
-        <div class="col">
-            <h1>{{user.display_name}}</h1>
+        <div class="col-8">
+            <h1>{{user.display_name}}
+                <a href="#">
+                    <i class="fas fa-edit"></i>
+                </a>
+            </h1>
             <div class="d-flex flex-column align-items-start">
                 <span>{{user.first_name.title}} {{user.last_name.title}}</span>
-                <span>{{user.email}}</span>
-                <span>{{user.phone}}</span>
+                <span class="d-flex align-items-center gap-2">
+                    email: {{user.email}}
+                    <a href="#">
+                        <i class="fas fa-edit"></i>
+                    </a>
+
+                </span>
+                <span class="d-flex align-items-center gap-2">
+                    phone: {{user.phone}}
+                    <a href="#">
+                        <i class="fas fa-edit"></i>
+                    </a>
+                </span>
                 <!-- only render wallet if user is patron -->
                 {% if user.is_superuser %}
                     <button class="btn-dark">
