--- a/Capstone/project/_assets/templates/profile.html
+++ b/Capstone/project/_assets/templates/profile.html
@@ -7,7 +7,7 @@
         <div class="col"></div>
         <div class="col-8">
             <h1>{{user.display_name}}
-                <a href="#">
+                <a href="{% url 'auth:update' %}">
                     <i class="fas fa-edit"></i>
                 </a>
             </h1>
