--- a/Capstone/project/_assets/templates/forms.html
+++ b/Capstone/project/_assets/templates/forms.html
@@ -6,8 +6,8 @@
         <h1>{{form_title.title}}</h1>
         <div class="col"></div>
         <div class="col">
-            {% if errors %}
-            <h4>{{errors}}</h4>
+            {% if message %}
+            <h4>{{message}}</h4>
             {% endif %}
             <form
             class="d-flex flex-column align-items-center p-3"
@@ -15,7 +15,9 @@
             method="post">
                 {% csrf_token %}
                 {{form}}
-                <button type="submit" class="btn-dark m-1">{{form_title}}</button>
+                <button type="submit" class="btn-dark m-1">
+                    {{form_title}}
+                </button>
             </form>
         </div>
         <div class="col"></div>
