--- a/Capstone/project/_assets/templates/home.html
+++ b/Capstone/project/_assets/templates/home.html
@@ -6,40 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Import Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous"
+        >
     <!-- Import Project Theme -->
-    <link rel="stylesheet" href=" {% static 'style/theme.css' %}">
+    <link
+        rel="stylesheet"
+        href=" {% static 'style/theme.css' %}"
+        >
     <!-- import fontawesome icon kit -->
-    <script src="https://kit.fontawesome.com/cf85ff7c3b.js" crossorigin="anonymous"></script>
+    <script
+        src="https://kit.fontawesome.com/cf85ff7c3b.js"
+        crossorigin="anonymous"
+        >
+    </script>
     <title>Atlas Electronica</title>
 </head>
 <body>
     <div class="content m-2 p-4">
-        <header class="d-flex align-items-center justify-content-between">
+        <header
+            class="d-flex align-items-center justify-content-between"
+            >
             <h1>Atlas Electronica</h1>
             <span class="d-flex align-items-center gap-2">
-                <!-- display navlinks based upon whether the user is logged in or not -->
+                <!-- display navlinks based upon whether the
+                    user is logged in or not -->
                 {% if user.is_authenticated %}
-                    Welcome, <a href="{% url 'home:profile' %}">{{user.display_name}}</a>
-                    <a href="{% url 'auth:logout' %}">Logout</a>
+                    Welcome, <a href="{% url 'home:profile' %}">
+                        {{user.display_name}}
+                    </a>
+                    <a href="{% url 'auth:logout' %}">
+                        Logout
+                    </a>
                 {% else %}
-                    <a href="{% url 'auth:login' %}">Login</a>
-                    <a href="{% url 'auth:register' %}">Register</a>
+                    <a href="{% url 'auth:login' %}">
+                        Login
+                    </a>
+                    <a href="{% url 'auth:register' %}">
+                        Register
+                    </a>
                 {% endif %}
             </span>
 
         </header>
         <main class="d-flex flex-column m-2 p-2 text-center">
-            <!-- links and forms will be removed when user is logged in and navigates to profile -->
+            <!-- links and forms will be removed when user is
+                logged in and navigates to profile -->
             {% block profile%}
             <h4 class="">Patron Portal</h4>
-                <!-- when a link is clicked the block will replace links with form -->
+                <!-- when a link is clicked the block will
+                    replace links with form -->
                 {% block forms %}
                 {% if user.is_authenticated %}
-                    <a href="{% url 'home:profile' %}">Profile</a>
+                    <a href="{% url 'home:profile' %}">
+                        Profile
+                    </a>
                 {% else %}
-                    <a href="{% url 'auth:login' %}">Login</a>
-                    <a href="{% url 'auth:register' %}">Register</a>
+                    <a href="{% url 'auth:login' %}">
+                        Login
+                    </a>
+                    <a href="{% url 'auth:register' %}">
+                        Register
+                    </a>
                 {% endif %}
 
                 {% endblock %}
@@ -52,6 +83,11 @@
     </div>
 
     <!-- Import Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+        >
+    </script>
 </body>
 </html>
