more indepth rebuild

--- a/Capstone/PatronPortal/_assets/style/theme.css
+++ b/Capstone/PatronPortal/_assets/style/theme.css
@@ -31,6 +31,9 @@ main {
 footer {
   border-top: 2px solid var(--void);
 }
+li {
+  list-style: none;
+}
 a:any-link {
   color: var(--sand);
   text-decoration: none;
