--- a/Capstone/PatronPortal/_assets/templates/_patrons/list.html
+++ b/Capstone/PatronPortal/_assets/templates/_patrons/list.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %} {% block profile %}
+{% extends '_home/index.html' %} {% block profile %}
 <h1>Patrons</h1>
 {% for patron in patrons %} {% if patron.unlimited %}
 <li>{{patron.first_name}} {{patron.last_name}}: ${{patron.donation}} &diam;</li>
