--- a/Capstone/PatronPortal/_assets/templates/profile.html
+++ b/Capstone/PatronPortal/_assets/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %} {% block profile %}
+{% extends '_home/index.html' %} {% block profile %}
 <div class="container">
   <div class="row">
     <h1>Profile</h1>
