completed app_Users update view

--- a/Capstone/PatronPortal/_assets/style/theme.css
+++ b/Capstone/PatronPortal/_assets/style/theme.css
@@ -34,9 +34,11 @@ footer {
 li {
   list-style: none;
 }
-a:any-link {
+a:any-link,
+.pseudo-link {
   color: var(--sand);
   text-decoration: none;
+  cursor: pointer;
 }
 form {
   border: 2px solid var(--void);
