--- a/Capstone/PatronPortal/_assets/templates/profile.html
+++ b/Capstone/PatronPortal/_assets/templates/profile.html
@@ -11,29 +11,24 @@
       <h1>{{user.display_name}}</h1>
       <div class="d-flex flex-column align-items-start">
         <span>{{user.first_name.title}} {{user.last_name.title}}</span>
-        <span class="d-flex align-items-center gap-2">
-          email: {{user.email}}
+        <!-- <span class="d-flex align-items-center gap-2">
+          username: {{user.username}}
           <a href="#">
             <i class="fas fa-edit"></i>
           </a>
-        </span>
-        <span class="d-flex align-items-center gap-2">
-          phone: {{user.phone}}
-          <a href="#">
-            <i class="fas fa-edit"></i>
-          </a>
-        </span>
+        </span> -->
         <!-- only render wallet if user is patron -->
-        {% if user.is_superuser %}
-        <button class="btn-dark">
-          <a href="{% url 'patrons:new' %}"> Add Patron </a>
-        </button>
-        {% else %} {% if user.unlimited %}
-        <span>tokens: unlimited</span>
-        {% else %}
-        <span>tokens: {{user.wallet}}</span>
-        {% endif %} {% endif %}
       </div>
+
+      {% if user.is_superuser %}
+      <button class="btn-dark">
+        <a href="{% url 'patrons:new' %}"> Add Patron </a>
+      </button>
+      {% else %} {% if user.unlimited %}
+      <span>tokens: unlimited</span>
+      {% else %}
+      <span>tokens: {{user.wallet}}</span>
+      {% endif %} {% endif %}
     </div>
     <div class="col"></div>
   </div>
