--- a/Capstone/PatronPortal/_assets/templates/_Users/update.html
+++ b/Capstone/PatronPortal/_assets/templates/_Users/update.html
@@ -7,6 +7,14 @@
       {% if message %}
       <h4>{{message}}</h4>
       {% endif %}
+      <!--  -->
+      {% if errors %}
+      <!--  -->
+      {% for error in errors %}
+      <h4>{{error}}</h4>
+      {% endfor %}
+      <!--  -->
+      {% endif %}
       <form
         class="d-flex flex-column align-items-center p-3"
         action="{% url url %}"
@@ -14,44 +22,76 @@
       >
         {% csrf_token %}
         <!--  -->
-        {% if new_username and new_password %}
-        <!--  -->
-        {{form}}
-        <label for="confirm-password"> Confirm New Password </label>
-        <input type="text" name="confirm-password" id="confirm-password" />
-        <!--  -->
-        {% elif new_username %}
-        <!--  -->
-        <label for="{{form.username.id_for_label}}">
-          {{form.username.label}}
+        <span class="pseudo-link" onclick="revealInput('new-username')">
+          update username
+        </span>
+        <label
+          for="new-username"
+          id="new-username-label"
+          class="visually-hidden"
+        >
+          New Username
         </label>
-        {{form.username}}
-        <!--  -->
-        {% elif new_password %}
-        <!--  -->
-        <label for="{{form.password.id_for_label}}">
-          {{form.password.label}}
+        <input
+          type="text"
+          name="new-username"
+          id="new-username"
+          class="visually-hidden"
+        />
+        <span
+          class="pseudo-link"
+          onclick="revealInput('new-password', confirm=true)"
+        >
+          update password
+        </span>
+        <label
+          for="new-password"
+          id="new-password-label"
+          class="visually-hidden"
+        >
+          New Password
         </label>
-        {{form.password}}
-        <label for="confirm-password"> Confirm New Password </label>
-        <input type="text" name="confirm-password" id="confirm-password" />
-        <!--  -->
-        {% else %}
-        <label for="username"
-          >update username
-          <input type="checkbox" name="username" id="username" />
+        <input
+          type="text"
+          name="new-password"
+          id="new-password"
+          class="visually-hidden"
+        />
+        <label
+          for="confirm-password"
+          id="confirm-label"
+          class="visually-hidden"
+        >
+          Confirm New Password
         </label>
-        <label for="password"
-          >update password
-          <input type="checkbox" name="password" id="password" />
-        </label>
-        {% endif %}
-
+        <input
+          type="text"
+          name="confirm-password"
+          id="confirm-password"
+          class="visually-hidden"
+        />
         <button type="submit" class="btn-dark m-1">{{form_title}}</button>
       </form>
     </div>
     <div class="col"></div>
   </div>
 </div>
+<script>
+  function revealInput(field, confirm = false) {
+    console.log(field);
+    document.getElementById(field).classList.toggle("visually-hidden");
+    document
+      .getElementById(field + "-label")
+      .classList.toggle("visually-hidden");
+    if (confirm === true) {
+      document
+        .getElementById("confirm-password")
+        .classList.toggle("visually-hidden");
+      document
+        .getElementById("confirm-label")
+        .classList.toggle("visually-hidden");
+    }
+  }
+</script>
 
 {% endblock %}
