--- a/Capstone/PatronPortal/_assets/templates/forms.html
+++ b/Capstone/PatronPortal/_assets/templates/forms.html
@@ -6,6 +6,12 @@
     <div class="col">
       {% if message %}
       <h4>{{message}}</h4>
+      {% endif %} {% if errors %}
+      <!--  -->
+      {% for error in errors %}
+      <h4>{{error}}</h4>
+      {% endfor %}
+      <!--  -->
       {% endif %}
       <form
         class="d-flex flex-column align-items-center p-3"
