--- a/Capstone/PatronPortal/_assets/templates/_home/index.html
+++ b/Capstone/PatronPortal/_assets/templates/_home/index.html
@@ -6,7 +6,7 @@
       <!-- display navlinks based upon whether the
                 user is logged in or not -->
       {% if user.is_authenticated %} Welcome,
-      <a href="{% url 'user:profile' %}"> {{user.username}} </a>
+      <a href="{% url 'user_profile' %}"> {{user.username}} </a>
       <a href="{% url 'user:logout' %}"> Logout </a>
       {% else %}
       <a href="{% url 'user:login' %}"> Login </a>
