--- a/Capstone/Portal/_assets/_style/theme.css
+++ b/Capstone/Portal/_assets/_style/theme.css
@@ -4,7 +4,7 @@
   --void: #0c011a;
   --ocean: #142677;
   --wave: #2f70a8;
-  --sand: #b97e26;
+  --sand: #d6a10f;
   --land: #642805;
   --grass: #078d12;
   --forest: #06690e;
@@ -39,6 +39,9 @@ a:any-link,
   color: var(--sand);
   text-decoration: none;
   cursor: pointer;
+}
+.home-link {
+  color: var(--stone) !important;
 }
 form {
   border: 2px solid var(--void);
