implemented fav-color and link toggle

--- a/Capstone/Portal/_assets/_style/theme.css
+++ b/Capstone/Portal/_assets/_style/theme.css
@@ -2,9 +2,9 @@
 
 :root {
   --void: #0c011a;
-  --ocean: #142677;
-  --wave: #2f70a8;
-  --sand: #d6a10f;
+  --ocean: #142058;
+  --wave: #1f5c91;
+  --sand: #ebca10;
   --land: #642805;
   --grass: #078d12;
   --forest: #06690e;
